feat: add operations
