# src/api.yaml
@@ -1,9 +1,130 @@
-openapi: 3.1.0
+openapi: 3.0.1
 info:
-  title: PatientFlowAPI
+  title: Samples.AspNetCore.v6.Facade
   version: '1.0'
-  contact:
-    name: David Kossoglyad
-    email: david@logoui.co.il
-servers:
-  - url: 'http://localhost:3000'
+paths:
+  "/WeatherForecast":
+    get:
+      tags:
+      - WeatherForecast
+      operationId: GetWeatherForecast
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/WeatherForecast"
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/WeatherForecast"
+            text/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/WeatherForecast"
+    post:
+      tags:
+      - WeatherForecast
+      operationId: PostWeatherForecast
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/WeatherForecast"
+          text/json:
+            schema:
+              "$ref": "#/components/schemas/WeatherForecast"
+          application/*+json:
+            schema:
+              "$ref": "#/components/schemas/WeatherForecast"
+      responses:
+        '200':
+          description: Success
+    delete:
+      tags:
+      - WeatherForecast
+      operationId: DeleteWeatherForecast
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: string
+              format: date-time
+          text/json:
+            schema:
+              type: string
+              format: date-time
+          application/*+json:
+            schema:
+              type: string
+              format: date-time
+      responses:
+        '200':
+          description: Success
+    put:
+      tags:
+      - WeatherForecast
+      operationId: PutWeatherForecast
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/WeatherForecast"
+          text/json:
+            schema:
+              "$ref": "#/components/schemas/WeatherForecast"
+          application/*+json:
+            schema:
+              "$ref": "#/components/schemas/WeatherForecast"
+      responses:
+        '200':
+          description: Success
+  "/WeatherForecast/{date}":
+    get:
+      tags:
+      - WeatherForecast
+      operationId: GetWeatherForecastByDate
+      parameters:
+      - name: date
+        in: path
+        required: true
+        schema:
+          type: string
+          format: date-time
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                "$ref": "#/components/schemas/WeatherForecast"
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/WeatherForecast"
+            text/json:
+              schema:
+                "$ref": "#/components/schemas/WeatherForecast"
+components:
+  schemas:
+    WeatherForecast:
+      type: object
+      properties:
+        date:
+          type: string
+          format: date-time
+        temperatureC:
+          type: integer
+          format: int32
+        temperatureF:
+          type: integer
+          format: int32
+          readOnly: true
+        summary:
+          type: string
+          nullable: true
+      additionalProperties: false
